--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,12 @@ a {
   align-items: center;
 }
 
+.header .container {
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -72,41 +78,198 @@ a {
   padding-bottom: 94px;
 }
 
-/* ================ */
-/* ==== HEADER ==== */
-/* ================ */
+.backdrop {
+  display: flex;
+  background-color: var(--backdrop-background);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  cursor: not-allowed;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.is-hidden .modal-box {
+  transform: scale(0.8);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--white-color);
+  border: 1px solid var(--modal-window-button);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal-box {
+  position: relative;
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--white-color);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: scale(1);
+  transition-property: transform;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.input-checkbox {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 2px solid var(--black-color);
+  border-radius: 2px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  margin-right: 6px;
+}
+
+.input-checkbox:checked {
+  background-image: url("../images/svg/icon-check.svg");
+  background-color: var(--blue-color);
+  border-color: var(--blue-color);
+}
+
+.checkbox-link {
+  color: var(--blue-color);
+}
+
+.submit-button {
+  width: 200px;
+  height: 50px;
+  background-color: var(--blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  color: var(--white-color);
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+
+.send-button {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  top: 50px;
+  margin: 0 auto;
+}
+
+.animate1 {
+  animation-name: animate1;
+  animation-duration: 700ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+  animation-timing-function: linear;
+  animation-delay: 0ms;
+}
+
+@keyframes animate1 {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
+.logo__header {
+  margin-right: 93px;
+}
+
+.logo__footer {
+  width: 145px;
+  height: 31px;
+}
+
+.logo__text {
+  color: var(--blue-color);
+}
+
+.logo__text--light-theme {
+  color: var(--solid-black-color);
+}
+
+.logo__text--dark-theme {
+  color: var(--white-color);
+}
 
 .header {
   border-bottom: 1px solid var(--header-border-color);
 }
 
-.header .container {
-  display: flex;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.navigation {
+.nav {
   display: flex;
 }
 
-.nav-links {
+.nav__list {
   display: flex;
 }
 
-.navigation-item:not(:last-child) {
-  margin-right: 46px;
+.nav__list a {
+  color: var(--black-color);
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-item-link {
-  position: relative;
-}
-
-.nav-links .navigation-item-link {
+.nav__list a:hover,
+.nav__list a:focus {
   color: var(--blue-color);
 }
 
-.navigation-item-link::after {
+.nav__item:not(:last-child) {
+  margin-right: 46px;
+}
+
+.nav__item .nav__link--active {
+  color: var(--blue-color);
+}
+
+.nav__link--active {
+  position: relative;
+}
+
+.nav__link--active::after {
   content: '';
   display: block;
   width: 100%;
@@ -117,62 +280,22 @@ a {
   top: 45px;
 }
 
-.web-studio-link-header {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin-right: 93px;
-}
-
-.nav-header-mail {
-  display: flex;
-  margin-left: 345px;
-  margin-right: 30px;
-  align-items: center;
-  justify-content: center;
-  fill: var(--grey-color);
-}
-
-.nav-header-tel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: var(--grey-color);
-}
-
 .logo-icon {
   margin-right: 10px;
 }
 
-.nav-header-mail:hover,
-.nav-header-mail:focus,
-.nav-header-tel:hover,
-.nav-header-tel:focus {
-  fill: var(--blue-color);
+.nav-header-mail {
+  margin-left: 345px;
+  margin-right: 30px;
 }
 
-.blue-text {
-  color: var(--blue-color);
-}
-
-.black-text {
-  color: var(--solid-black-color);
-}
-
-.white-text {
-  color: var(--white-color);
-}
-
-.nav-links a {
-  color: var(--black-color);
-}
-
-.nav-links a,
 .nav-header-mail,
 .nav-header-tel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--grey-color);
+  color: var(--grey-color);
   font-family: inherit;
   font-style: normal;
   font-weight: 500;
@@ -182,26 +305,16 @@ a {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-links a:hover,
-.nav-links a:focus,
 .nav-header-mail:hover,
 .nav-header-mail:focus,
 .nav-header-tel:hover,
 .nav-header-tel:focus {
   color: var(--blue-color);
+  fill: var(--blue-color);
 }
-
-.nav-header-mail,
-.nav-header-tel {
-  color: var(--grey-color);
-}
-
-/* ================ */
-/* ==== EFFECTIVE SOLUTIONS ==== */
-/* ================ */
 
 .effective-solutions {
-  background-image: linear-gradient(rgba(47, 50, 58, 0.4), rgba(47, 50, 58, 0.4)), url('../images/mainPageBackground.png');
+  background-image: linear-gradient(rgba(47, 50, 58, 0.4), rgba(47, 50, 58, 0.4)), url("../images/mainPageBackground.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: rgba(47, 50, 58, 0.4);
@@ -250,10 +363,6 @@ a {
   cursor: pointer;
 }
 
-/* ================ */
-/* ==== OUR ATTRIBUTES ==== */
-/* ================ */
-
 .our-attributes-list {
   display: flex;
 }
@@ -296,10 +405,6 @@ a {
   letter-spacing: 0.03em;
 }
 
-/* ================ */
-/* ==== WHAT DO WE DO ==== */
-/* ================ */
-
 .what-do-we-do-title {
   margin-bottom: 50px;
   margin-right: auto;
@@ -338,10 +443,6 @@ a {
   align-items: center;
   justify-content: center;
 }
-
-/* ================ */
-/* ==== OUR TEAM ==== */
-/* ================ */
 
 .our-team {
   background-color: var(--btn-white-bg-color);
@@ -430,10 +531,6 @@ a {
   background-color: var(--blue-color);
 }
 
-/* ================ */
-/* ==== OUR CUSTOMERS ==== */
-/* ================ */
-
 .our-customers-title {
   margin-bottom: 50px;
 }
@@ -467,10 +564,6 @@ a {
   margin-right: 30px;
 }
 
-/* ================ */
-/* ==== FOOTER ==== */
-/* ================ */
-
 .footer .container {
   display: flex;
   align-items: flex-start;
@@ -488,17 +581,6 @@ a {
 
 .footer-address-list {
   margin-top: 20px;
-}
-
-.web-studio-link-footer {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  width: 145px;
-  height: 31px;
 }
 
 .footer-address-city,
@@ -582,7 +664,6 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: var(--es-and-footer-bg-color);
-
   font-family: inherit;
   font-size: 16px;
   line-height: 1.25;
@@ -609,7 +690,6 @@ a {
   border-radius: 4px;
   border: none;
   color: var(--white-color);
-
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
@@ -627,12 +707,6 @@ a {
   margin-left: 24px;
   fill: var(--white-color);
 }
-
-/* ==== PORTFOLIO ==== */
-
-/* ================ */
-/* ==== FILTER BUTTONS ==== */
-/* ================ */
 
 .filter-buttons {
   width: 572px;
@@ -671,10 +745,6 @@ a {
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
-/* ================ */
-/* ==== PORTFOLIO ==== */
-/* ================ */
 
 .portfolio-content-title,
 .portfolio-content-description {
@@ -725,7 +795,7 @@ a {
   overflow: hidden;
 }
 
-.portfolio-list-item:hover .portfolio-list-item-box-overlay{
+.portfolio-list-item:hover .portfolio-list-item-box-overlay {
   transform: translateY(0);
 }
 
@@ -754,83 +824,6 @@ a {
   padding: 20px 24px;
 }
 
-/* ================ */
-/* MODAL WINDOW */
-/* ================ */
-
-.backdrop {
-  display: flex;
-  background-color: var(--backdrop-background);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  cursor: not-allowed;
-  align-items: center;
-  justify-content: center;
-  transition-duration: 200ms;
-  transition-timing-function: linear;
-}
-
-.modal-box {
-  position: relative;
-  width: 528px;
-  min-height: 581px;
-  background-color: var(--white-color);
-  border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  transform: scale(1);
-  transition-property: transform;
-  transition-duration: 200ms;
-  transition-timing-function: linear;
-}
-
-.is-hidden .modal-box {
-  transform: scale(0.8);
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--white-color);
-  border: 1px solid var(--modal-window-button);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.animate1 {
-  animation-name: animate1;
-  animation-duration: 700ms;
-  animation-iteration-count: 1;
-  animation-fill-mode: both;
-  animation-timing-function: linear;
-  animation-delay: 0ms;
-}
-
-@keyframes animate1 {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
 .leave-your-data {
   position: relative;
   top: 40px;
@@ -846,10 +839,6 @@ a {
   letter-spacing: 0.03em;
   color: var(--black-color);
 }
-
-/* ======================= */
-/* ====== FORM MAIN ====== */
-/* ======================= */
 
 .form-main-window {
   position: relative;
@@ -884,7 +873,7 @@ a {
   font-size: 12px;
   line-height: 1.166;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 1);
+  color: #757575;
 }
 
 .label-icon {
@@ -927,10 +916,6 @@ a {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* ====================== */
-/* == RULES AND POLICY == */
-/* ====================== */
-
 .rules-and-policy {
   position: relative;
   top: 20px;
@@ -944,58 +929,6 @@ a {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  color: rgba(117, 117, 117, 100%);
+  color: #757575;
 }
-
-.input-checkbox {
-  appearance: none;
-  width: 16px;
-  height: 16px;
-  border: 2px solid var(--black-color);
-  border-radius: 2px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  margin-right: 6px;
-}
-
-.input-checkbox:checked {
-  background-image: url('../images/svg/icon-check.svg');
-  background-color: var(--blue-color);
-  border-color: var(--blue-color);
-}
-
-.checkbox-link {
-  color: var(--blue-color);
-}
-
-/* ======================= */
-/* ===== SEND BUTTON ===== */
-/* ======================= */
-
-.send-button {
-  position: relative;
-  width: 200px;
-  height: 50px;
-  top: 50px;
-  margin: 0 auto;
-}
-
-.submit-button {
-  width: 200px;
-  height: 50px;
-  background-color: var(--blue-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  color: var(--white-color);
-  font-family: inherit;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.875;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-}
+/*# sourceMappingURL=main.css.map */
