--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,21 @@
+@import './utils/variables';
+
 @import './base/common';
 @import './base/container';
 @import './base/section';
 
 @import './components/backdrop';
 @import './components/modal-box';
-@import './components/policy-checkbox';
 @import './components/submit-button';
-@import './components/send-button';
-@import './components/form-animation';
-@import "./components/logo";
+@import './components/logo';
+@import './components/section-title';
+@import './components/header';
+@import './components/footer';
 
-@import './layout/header';
 @import './layout/effective-solutions';
-@import './layout/our-attributes';
+@import './layout/attributes';
 @import './layout/what-do-we-do';
-@import './layout/our-team';
-@import './layout/our-customers';
-@import './layout/footer';
-@import './layout/filter-buttons';
+@import './layout/team';
+@import './layout/customers';
 @import './layout/portfolio';
 @import './layout/leave-your-data-form';
