--- a/sass/components/_modal-box.scss
+++ b/sass/components/_modal-box.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 528px;
   min-height: 581px;
-  background-color: var(--white-color);
+  background-color: $secondary-color;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: scale(1);
