--- a/sass/components/_submit-button.scss
+++ b/sass/components/_submit-button.scss
@@ -1,11 +1,11 @@
 .submit-button {
   width: 200px;
   height: 50px;
-  background-color: var(--blue-color);
+  background-color: $third-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-  color: var(--white-color);
+  color: $secondary-color;
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
