--- a/sass/layout/_leave-your-data-form.scss
+++ b/sass/layout/_leave-your-data-form.scss
@@ -1,107 +1,151 @@
-.leave-your-data {
-  position: relative;
-  top: 40px;
-  left: 40px;
-  right: 40px;
-  width: 448px;
-  height: 23px;
-  text-align: center;
-  font-family: inherit;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  color: var(--black-color);
+.btn__close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: $secondary-color;
+  border: 1px solid $modal-button-color;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.form-main-window {
-  position: relative;
-  top: 52px;
-  left: 40px;
-  right: 40px;
-  width: 448px;
-  height: 342px;
-}
+.form {
+  &__title {
+    position: relative;
+    top: 40px;
+    left: 40px;
+    right: 40px;
+    width: 448px;
+    height: 23px;
+    text-align: center;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    color: $main-color;
+  }
 
-.input-field {
-  display: flex;
-  align-items: center;
-  width: 448px;
-  height: 40px;
-  margin-bottom: 10px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__main {
+    position: relative;
+    top: 52px;
+    left: 40px;
+    right: 40px;
+    width: 448px;
+    height: 342px;
+  }
 
-.input-field:hover,
-.input-field:focus-within {
-  outline: none;
-  border-color: var(--blue-color);
-  fill: var(--blue-color);
-}
+  &__label {
+    font-family: inherit;
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 1);
+  }
 
-.label {
-  font-family: inherit;
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 1);
-}
+  &__input {
+    display: flex;
+    align-items: center;
+    width: 448px;
+    height: 40px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.label-icon {
-  width: 18px;
-  height: 18px;
-  margin-left: 12px;
-  margin-right: 12px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &:hover,
+    &:focus-within {
+      outline: none;
+      border-color: $third-color;
+      fill: $third-color;
+    }
+  }
 
-.data-input {
-  border: none;
-  height: 100%;
-  width: 100%;
-  outline: none;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.167;
-  letter-spacing: 0.01em;
-}
+  &__icon {
+    width: 18px;
+    height: 18px;
+    margin-left: 12px;
+    margin-right: 12px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.input-comment:hover,
-.input-comment:focus {
-  outline: none;
-  border-color: var(--blue-color);
-}
+  &__data {
+    border: none;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.01em;
+  }
 
-.input-comment {
-  width: 448px;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  resize: none;
-  padding: 12px 16px;
-  font-family: inherit;
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__comment {
+    width: 448px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    font-family: inherit;
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.01em;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.rules-and-policy {
-  position: relative;
-  top: 20px;
-  margin: 0 auto;
-  width: 419px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: inherit;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  color: rgba(117, 117, 117, 100%);
+    &:hover,
+    &:focus {
+      outline: none;
+      border-color: $third-color;
+    }
+  }
+
+  &__policy {
+    position: relative;
+    top: 20px;
+    margin: 0 auto;
+    width: 419px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: inherit;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: rgba(117, 117, 117, 100%);
+  }
+
+  &__checkbox {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 2px solid $main-color;
+    border-radius: 2px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin-right: 6px;
+
+    &:checked {
+      background-image: url('../images/svg/icon-check.svg');
+      background-color: $third-color;
+      border-color: $third-color;
+    }
+  }
+
+  &__link {
+    color: $third-color;
+  }
+
+  &__button {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    top: 50px;
+    margin: 0 auto;
+  }
 }
