--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,77 +1,115 @@
-.portfolio-content-title,
-.portfolio-content-description {
-  font-family: inherit;
-}
+.portfolio {
+  &__buttons {
+    width: 572px;
+    margin: 0 auto;
+  }
 
-.portfolio-content-title {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
+  &__buttons-list {
+    display: flex;
+    margin-bottom: 34px;
+  }
 
-.portfolio-content-description {
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.03em;
-}
+  &__buttons-item:not(:last-child) {
+    margin-right: 8px;
+  }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
+  &__button {
+    color: $btn-dark-font-color;
+    background-color: $btn-white-bg-color;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.625;
+    text-align: center;
+    letter-spacing: 0.03em;
+    padding: 6px 22px;
+    border: none;
+    border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.portfolio-list-item {
-  border-bottom: 1px solid var(--header-border-color);
-  background-color: var(--white-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
+    &:hover,
+    &:focus {
+      color: $secondary-color;
+      background-color: $third-color;
+      cursor: pointer;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+  }
 
-.portfolio-list-item:hover,
-.portfolio-list-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 
-.portfolio-content-title {
-  margin-bottom: 4px;
-}
+  &__item {
+    border-bottom: 1px solid $header-border-color;
+    background-color: $secondary-color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 
-.portfolio-list-item-box {
-  position: relative;
-}
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
 
-.portfolio-list-item-top-box-container {
-  position: relative;
-  overflow: hidden;
-}
+  &__item:hover &__img-overlay {
+    transform: translateY(0);
+  }
 
-.portfolio-list-item:hover .portfolio-list-item-box-overlay{
-  transform: translateY(0);
-}
+  &__img-container {
+    position: relative;
+    overflow: hidden;
+  }
 
-.portfolio-list-item-box-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--portfolio-blue-overlay);
-  transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__img {
+    width: 370px;
+    height: 294px;
+  }
 
-.portfolio-list-item-box-overlay > p {
-  padding: 49px 45px 49px 24px;
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 1.555;
-  letter-spacing: 0.03em;
-  color: var(--white-color);
-}
+  &__img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $portfolio-overlay-color;
+    transform: translateY(100%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.portfolio-positioning-box {
-  display: block;
-  padding: 20px 24px;
+  &__img-overlay > p {
+    padding: 49px 45px 49px 24px;
+    font-family: inherit;
+    font-size: 18px;
+    line-height: 1.555;
+    letter-spacing: 0.03em;
+    color: $secondary-color;
+  }
+
+  &__description-box {
+    display: block;
+    padding: 20px 24px;
+  }
+
+  &__title,
+  &__description {
+    font-family: inherit;
+  }
+
+  &__title {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+  }
+
+  &__description {
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+  }
 }
