--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -40,6 +40,7 @@
 
   &__list {
     display: flex;
+    column-gap: 46px;
 
     & a {
       color: $main-color;
@@ -59,10 +60,6 @@
   }
 
   &__item {
-    &:not(:last-child) {
-      margin-right: 46px;
-    }
-
     & .nav__link--active {
       color: $third-color;
     }
