--- a/sass/layout/_what-do-we-do.scss
+++ b/sass/layout/_what-do-we-do.scss
@@ -2,14 +2,11 @@
 
   &__list {
     display: flex;
+    column-gap: 30px;
   }
 
   &__item {
     position: relative;
-
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
   }
 
   &__item > &__label {
