--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,16 +1,16 @@
 $main-font: 'Roboto', sans-serif;
 $secondary-font: 'Raleway', sans-serif;
 
-$main-color: rgba(33, 33, 33, 1);
-$secondary-color: rgba(255, 255, 255, 1);
-$third-color: rgba(33, 150, 243, 1);
-$btn-dark-font-color: rgba(0, 0, 0, 1);
-$nav-icons-color: rgba(117, 117, 117, 1);
-$footer-background-color: rgba(47, 48, 58, 1);
-$btn-white-bg-color: rgba(245, 244, 250, 1);
+$main-color: rgb(33, 33, 33);
+$secondary-color: rgb(255, 255, 255);
+$third-color: rgb(33, 150, 243);
+$btn-dark-font-color: rgb(0, 0, 0);
+$nav-icons-color: rgb(117, 117, 117);
+$footer-background-color: rgb(47, 48, 58);
+$btn-white-bg-color: rgb(245, 244, 250);
 $footer-link-color: rgba(255, 255, 255, 0.6);
-$header-border-color: rgba(236, 236, 236, 1);
-$social-icon-color: rgba(175, 177, 184, 1);
+$header-border-color: rgb(236, 236, 236);
+$social-icon-color: rgb(175, 177, 184);
 $footer-icon-background: rgba(255, 255, 255, 0.1);
 $what-do-we-do-img-background: rgba(47, 48, 58, 0.8);
 $portfolio-overlay-color: rgba(33, 150, 243, 0.9);
