--- a/css/main.css
+++ b/css/main.css
@@ -75,8 +75,6 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
   width: 100%;
   height: 100%;
   cursor: not-allowed;
@@ -210,6 +208,7 @@ a {
 
 .nav__list {
   display: flex;
+  column-gap: 46px;
 }
 
 .nav__list a {
@@ -226,10 +225,6 @@ a {
 .nav__list a:hover,
 .nav__list a:focus {
   color: #2196f3;
-}
-
-.nav__item:not(:last-child) {
-  margin-right: 46px;
 }
 
 .nav__item .nav__link--active {
@@ -302,10 +297,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.join-us__item:not(:last-child) {
-  margin-right: 10px;
+  column-gap: 10px;
 }
 
 .join-us__link {
@@ -432,15 +424,12 @@ a {
 
 .attributes__list {
   display: flex;
+  column-gap: 30px;
 }
 
 .attributes__item {
   width: 270px;
   height: 251px;
-}
-
-.attributes__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .attributes__icon-background {
@@ -478,14 +467,11 @@ a {
 
 .what-do-we-do__list {
   display: flex;
+  column-gap: 30px;
 }
 
 .what-do-we-do__item {
   position: relative;
-}
-
-.what-do-we-do__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .what-do-we-do__item > .what-do-we-do__label {
@@ -515,16 +501,13 @@ a {
 
 .team__list {
   display: flex;
+  column-gap: 30px;
 }
 
 .team__item {
   background-color: white;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.team__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .team__description {
@@ -581,6 +564,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  column-gap: 30px;
 }
 
 .customers__item {
@@ -601,10 +585,6 @@ a {
   cursor: pointer;
 }
 
-.customers__item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .customers__icon {
   width: 106px;
   height: 60.04px;
@@ -618,10 +598,7 @@ a {
 .portfolio__buttons-list {
   display: flex;
   margin-bottom: 34px;
-}
-
-.portfolio__buttons-item:not(:last-child) {
-  margin-right: 8px;
+  column-gap: 8px;
 }
 
 .portfolio__button {
@@ -654,7 +631,6 @@ a {
 }
 
 .portfolio__item {
-  border-bottom: 1px solid #ececec;
   background-color: white;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
@@ -701,6 +677,9 @@ a {
 .portfolio__description-box {
   display: block;
   padding: 20px 24px;
+  border-bottom: 1px solid #ececec;
+  border-left: 1px solid #ececec;
+  border-right: 1px solid #ececec;
 }
 
 .portfolio__title, .portfolio__description {
