--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -50,10 +50,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.join-us__item:not(:last-child) {
-  margin-right: 10px;
+  column-gap: 10px;
 }
 
 .join-us__link {
