--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    column-gap: 30px;
   }
 
   &__item {
@@ -21,10 +22,6 @@
       border: 1px solid $third-color;
       fill: $third-color;
       cursor: pointer;
-    }
-
-    &:not(:last-child) {
-      margin-right: 30px;
     }
   }
 
