--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -7,10 +7,7 @@
   &__buttons-list {
     display: flex;
     margin-bottom: 34px;
-  }
-
-  &__buttons-item:not(:last-child) {
-    margin-right: 8px;
+    column-gap: 8px;
   }
 
   &__button {
@@ -44,7 +41,6 @@
   }
 
   &__item {
-    border-bottom: 1px solid $header-border-color;
     background-color: $secondary-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
@@ -92,6 +88,9 @@
   &__description-box {
     display: block;
     padding: 20px 24px;
+    border-bottom: 1px solid $header-border-color;
+    border-left: 1px solid $header-border-color;
+    border-right: 1px solid $header-border-color;
   }
 
   &__title,
