--- a/css/main.css
+++ b/css/main.css
@@ -261,13 +261,13 @@ a {
 }
 
 .footer__link {
-  color: rgba(255, 255, 255, 0.6);
   font-family: inherit;
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -276,10 +276,10 @@ a {
 }
 
 .join-us {
-  margin-top: 15px;
-  margin-left: 70px;
   width: 206px;
   height: 80px;
+  margin-top: 15px;
+  margin-left: 70px;
 }
 
 .join-us__title,
@@ -295,15 +295,15 @@ a {
 
 .join-us__list {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   column-gap: 10px;
 }
 
 .join-us__link {
-  display: flex;
   width: 44px;
   height: 44px;
+  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
@@ -334,18 +334,19 @@ a {
 .newsletter__email {
   width: 358px;
   height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  background-color: #2f303a;
   font-family: inherit;
+  font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
-  display: flex;
   letter-spacing: 0.03em;
-  padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  display: flex;
+  box-sizing: border-box;
+  padding-left: 16px;
 }
 
 .newsletter__email:focus {
@@ -353,22 +354,22 @@ a {
 }
 
 .newsletter__button {
-  margin-left: 12px;
   width: 200px;
   height: 50px;
-  background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  color: white;
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: white;
+  background-color: #2196f3;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   display: flex;
+  margin-left: 12px;
   align-items: center;
   justify-content: center;
-  letter-spacing: 0.06em;
   cursor: pointer;
 }
 
@@ -394,26 +395,26 @@ a {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase;
   margin: 0 auto;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .effective-solutions__button {
   color: white;
-  background-color: #2196f3;
   font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
+  margin: 30px auto 0px;
+  background-color: #2196f3;
   padding: 10px 42px;
   border: none;
   border-radius: 4px;
   display: inline-block;
-  margin: 30px auto 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -433,11 +434,11 @@ a {
 }
 
 .attributes__icon-background {
+  width: 270px;
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 270px;
-  height: 120px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
 }
@@ -534,17 +535,17 @@ a {
 
 .team-social__list {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   column-gap: 10px;
 }
 
 .team-social__link {
   display: flex;
-  width: 44px;
-  height: 44px;
   align-items: center;
   justify-content: center;
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -574,8 +575,8 @@ a {
   width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
-  border-radius: 4px;
   fill: #afb1b8;
+  border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -602,15 +603,15 @@ a {
 }
 
 .portfolio__button {
-  color: black;
-  background-color: #f5f4fa;
   font-family: inherit;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
-  text-align: center;
   letter-spacing: 0.03em;
+  color: black;
+  background-color: #f5f4fa;
+  font-style: normal;
+  text-align: center;
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
@@ -655,22 +656,23 @@ a {
 }
 
 .portfolio__img-overlay {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__img-overlay > p {
-  padding: 49px 45px 49px 24px;
   font-family: inherit;
+  font-weight: inherit;
   font-size: 18px;
   line-height: 1.555;
   letter-spacing: 0.03em;
+  padding: 49px 45px 49px 24px;
   color: white;
 }
 
@@ -682,11 +684,8 @@ a {
   border-right: 1px solid #ececec;
 }
 
-.portfolio__title, .portfolio__description {
-  font-family: inherit;
-}
-
 .portfolio__title {
+  font-family: inherit;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -695,17 +694,21 @@ a {
 }
 
 .portfolio__description {
+  font-family: inherit;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .btn__close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
   width: 30px;
   height: 30px;
+  top: 8px;
+  left: none;
+  right: 8px;
+  position: absolute;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -713,32 +716,33 @@ a {
 }
 
 .form__title {
-  position: relative;
+  width: 448px;
+  height: 23px;
   top: 40px;
   left: 40px;
   right: 40px;
-  width: 448px;
-  height: 23px;
-  text-align: center;
   font-family: inherit;
   font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: 0.03em;
+  position: relative;
+  text-align: center;
   color: #212121;
 }
 
 .form__main {
-  position: relative;
+  width: 448px;
+  height: 342px;
   top: 52px;
   left: 40px;
   right: 40px;
-  width: 448px;
-  height: 342px;
+  position: relative;
 }
 
 .form__label {
   font-family: inherit;
+  font-weight: inherit;
   font-size: 12px;
   line-height: 1.166;
   letter-spacing: 0.01em;
@@ -746,10 +750,10 @@ a {
 }
 
 .form__input {
-  display: flex;
-  align-items: center;
   width: 448px;
   height: 40px;
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -772,28 +776,30 @@ a {
 }
 
 .form__data {
-  border: none;
-  height: 100%;
   width: 100%;
-  outline: none;
+  height: 100%;
+  font-family: none;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.167;
   letter-spacing: 0.01em;
+  border: none;
+  outline: none;
 }
 
 .form__comment {
   width: 448px;
   height: 120px;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
-  font-family: inherit;
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -803,25 +809,26 @@ a {
 }
 
 .form__policy {
-  position: relative;
-  top: 20px;
-  margin: 0 auto;
   width: 419px;
   height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-family: inherit;
+  font-weight: inherit;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
+  position: relative;
+  top: 20px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #757575;
 }
 
 .form__checkbox {
-  appearance: none;
   width: 16px;
   height: 16px;
+  appearance: none;
   border: 2px solid #212121;
   border-radius: 2px;
   background-repeat: no-repeat;
@@ -841,9 +848,9 @@ a {
 }
 
 .form__button {
-  position: relative;
   width: 200px;
   height: 50px;
+  position: relative;
   top: 50px;
   margin: 0 auto;
 }
