--- a/sass/layout/_effective-solutions.scss
+++ b/sass/layout/_effective-solutions.scss
@@ -5,33 +5,30 @@
   background-color: rgba(47, 50, 58, 0.4);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
+  @mixin eff-sol-mix($color, $fontFamily, $fontStyle, $fontWeight, $fontSize, $lineHeight, $letterSpacing, $margin) {
+    color: $color;
+    font-family: $fontFamily;
+    font-style: $fontStyle;
+    font-weight: $fontWeight;
+    font-size: $fontSize;
+    line-height: $lineHeight;
+    letter-spacing: $letterSpacing;
+    margin: $margin;
+  }
+
   &__title {
-    color: $secondary-color;
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    @include eff-sol-mix($secondary-color, inherit, normal, 900, 44px, 1.36, 0.06em, 0 auto);
     text-align: center;
-    letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin: 0 auto;
   }
 
   &__button {
-    color: $secondary-color;
+    @include eff-sol-mix($secondary-color, inherit, normal, bold, 16px, 1.875, 0.06em, 30px auto 0px);
     background-color: $third-color;
-    font-family: inherit;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
     padding: 10px 42px;
     border: none;
     border-radius: 4px;
     display: inline-block;
-    margin: 30px auto 0px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
