--- a/sass/layout/_leave-your-data-form.scss
+++ b/sass/layout/_leave-your-data-form.scss
@@ -1,9 +1,26 @@
+@mixin width-height($width, $height) {
+  width: $width;
+  height: $height;
+}
+
+@mixin top-left-right($top, $left, $right) {
+  top: $top;
+  left: $left;
+  right: $right;
+}
+
+@mixin font($fontFamily, $fontWeight, $fontSize, $lineHeight, $letterSpacing) {
+  font-family: $fontFamily;
+  font-weight: $fontWeight;
+  font-size: $fontSize;
+  line-height: $lineHeight;
+  letter-spacing: $letterSpacing;
+}
+
 .btn__close {
+  @include width-height(30px, 30px);
+  @include top-left-right(8px, none, 8px);
   position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
   background-color: $secondary-color;
   border: 1px solid $modal-button-color;
   border-radius: 50%;
@@ -12,43 +29,29 @@
 
 .form {
   &__title {
+    @include width-height(448px, 23px);
+    @include top-left-right(40px, 40px, 40px);
+    @include font(inherit, bold, 20px, 1.15, 0.03em);
     position: relative;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    width: 448px;
-    height: 23px;
     text-align: center;
-    font-family: inherit;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
-    letter-spacing: 0.03em;
     color: $main-color;
   }
 
   &__main {
+    @include width-height(448px, 342px);
+    @include top-left-right(52px, 40px, 40px);
     position: relative;
-    top: 52px;
-    left: 40px;
-    right: 40px;
-    width: 448px;
-    height: 342px;
   }
 
   &__label {
-    font-family: inherit;
-    font-size: 12px;
-    line-height: 1.166;
-    letter-spacing: 0.01em;
+    @include font(inherit, inherit, 12px, 1.166, 0.01em);
     color: rgba(117, 117, 117, 1);
   }
 
   &__input {
+    @include width-height(448px, 40px);
     display: flex;
     align-items: center;
-    width: 448px;
-    height: 40px;
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
@@ -64,36 +67,27 @@
   }
 
   &__icon {
-    width: 18px;
-    height: 18px;
+    @include width-height(18px, 18px);
     margin-left: 12px;
     margin-right: 12px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__data {
+    @include width-height(100%, 100%);
+    @include font(none, 400, 12px, 1.167, 0.01em);
     border: none;
-    height: 100%;
-    width: 100%;
     outline: none;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.167;
-    letter-spacing: 0.01em;
   }
 
   &__comment {
-    width: 448px;
-    height: 120px;
+    @include width-height(448px, 120px);
+    @include font(inherit, inherit, 12px, 1.166, 0.01em);
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
     resize: none;
     padding: 12px 16px;
-    font-family: inherit;
-    font-size: 12px;
-    line-height: 1.166;
-    letter-spacing: 0.01em;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -104,25 +98,20 @@
   }
 
   &__policy {
+    @include width-height(419px, 24px);
+    @include font(inherit, inherit, 14px, 1.714, 0.03em);
     position: relative;
     top: 20px;
     margin: 0 auto;
-    width: 419px;
-    height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: inherit;
-    font-size: 14px;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
     color: rgba(117, 117, 117, 100%);
   }
 
   &__checkbox {
+    @include width-height(16px, 16px);
     appearance: none;
-    width: 16px;
-    height: 16px;
     border: 2px solid $main-color;
     border-radius: 2px;
     background-repeat: no-repeat;
@@ -142,9 +131,8 @@
   }
 
   &__button {
+    @include width-height(200px, 50px);
     position: relative;
-    width: 200px;
-    height: 50px;
     top: 50px;
     margin: 0 auto;
   }
