--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,18 +1,4 @@
-@mixin display-align($disp, $align, $justify) {
-  display: $disp;
-  align-items: $align;
-  justify-content: $justify;
-}
-
-@mixin width-height($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin border-fill($border, $fill) {
-  border: $border;
-  fill: $fill;
-}
+@import '../utils/mixins';
 
 .customers {
   &__list {
