--- a/sass/layout/_effective-solutions.scss
+++ b/sass/layout/_effective-solutions.scss
@@ -1,20 +1,11 @@
+@import '../utils/mixins';
+
 .effective-solutions {
   background-image: linear-gradient(rgba(47, 50, 58, 0.4), rgba(47, 50, 58, 0.4)), url('../images/mainPageBackground.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-color: rgba(47, 50, 58, 0.4);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  @mixin eff-sol-mix($color, $fontFamily, $fontStyle, $fontWeight, $fontSize, $lineHeight, $letterSpacing, $margin) {
-    color: $color;
-    font-family: $fontFamily;
-    font-style: $fontStyle;
-    font-weight: $fontWeight;
-    font-size: $fontSize;
-    line-height: $lineHeight;
-    letter-spacing: $letterSpacing;
-    margin: $margin;
-  }
 
   &__title {
     @include eff-sol-mix($secondary-color, inherit, normal, 900, 44px, 1.36, 0.06em, 0 auto);
