--- a/sass/layout/_leave-your-data-form.scss
+++ b/sass/layout/_leave-your-data-form.scss
@@ -1,21 +1,4 @@
-@mixin width-height($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin top-left-right($top, $left, $right) {
-  top: $top;
-  left: $left;
-  right: $right;
-}
-
-@mixin font($fontFamily, $fontWeight, $fontSize, $lineHeight, $letterSpacing) {
-  font-family: $fontFamily;
-  font-weight: $fontWeight;
-  font-size: $fontSize;
-  line-height: $lineHeight;
-  letter-spacing: $letterSpacing;
-}
+@import '../utils/mixins';
 
 .btn__close {
   @include width-height(30px, 30px);
