--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,15 +1,4 @@
-@mixin font($fontFamily, $fontWeight, $fontSize, $lineHeight, $letterSpacing) {
-  font-family: $fontFamily;
-  font-weight: $fontWeight;
-  font-size: $fontSize;
-  line-height: $lineHeight;
-  letter-spacing: $letterSpacing;
-}
-
-@mixin width-height($width, $height) {
-  width: $width;
-  height: $height;
-}
+@import '../utils/mixins';
 
 .portfolio {
   &__buttons {
